--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My JavaScript Game</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Optional CSS -->
+    <script src="script.js" defer></script> <!-- Link to your JavaScript -->
 </head>
 <body>
-  <h1>Welcome to My GitHub Page</h1>
-  <p>This is my first GitHub Pages website!</p>
+    <h1>Welcome to My Game!</h1>
+    <button onclick="startGame()">Start Game</button>
 </body>
 </html>
+
