--- a/index.html
+++ b/index.html
@@ -3,41 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Applied Computing Game</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optional CSS file -->
+    <title>My Game</title>
     <script src="GameHome1.js" defer></script> <!-- Link to your JavaScript file -->
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Applied Computing Game!</h1>
-        <nav>
-            <ul>
-                <li><a href="#game-start">Start Game</a></li>
-                <li><a href="#instructions">Instructions</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <section id="game-start">
-            <h2>Start the Game</h2>
-            <button onclick="startGame()">Start Game</button> <!-- Call a function from your JS -->
-        </section>
-
-        <section id="instructions">
-            <h2>Instructions</h2>
-            <p>Here you will provide instructions on how to play the game.</p>
-        </section>
-
-        <section id="about">
-            <h2>About This Game</h2>
-            <p>This section can contain information about the game's purpose and design.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Your Name | All rights reserved.</p>
-    </footer>
+    <h1>Welcome to the Applied Computing Game!</h1>
+    <button onclick="startGame()">Start Game</button> <!-- Call your JavaScript function -->
 </body>
 </html>
