--- a/index.html
+++ b/index.html
@@ -3,25 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Home</title>
+    <title>Practice</title>
     <style>
-        /* Optional: Add some basic styling */
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
+            overflow: hidden;
+            background-color: grey;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
         }
         canvas {
-            border: 1px solid #000;
+            display: block;
+        }
+        #topImage {
+            position: absolute;
+            top: 20px; 
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1000; 
+        }
+        .character {
+            position: absolute;
+            width: 160px;
+            height: 190px;
+        }
+
+        /* Flip KEN horizontally */
+        #stickman2 {
+            transform: scaleX(-1);
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to Game Home</h1>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+
+    <!-- Top center image -->
+    <img id="topImage" src="escapekey.gif" alt="Top Center Image">
     
-    <script src="GameHome1.js"></script>
+    <!-- Character GIFs -->
+    <img id="stickman1" class="character" src="RYUGIF1.gif" alt="Stickman 1">
+    <img id="stickman2" class="character" src="KENGIF1.gif" alt="Stickman 2">
+    
+    <canvas id="gameCanvas"></canvas>
+
+    <script>
+        // Your game logic can go here, if needed
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        const stickman1 = document.getElementById('stickman1');
+        const stickman2 = document.getElementById('stickman2');
+
+        stickman1.style.left = `${canvas.width / 4}px`;
+        stickman1.style.top = `${canvas.height - 150}px`;
+
+        stickman2.style.left = `${(canvas.width * 3) / 4}px`;
+        stickman2.style.top = `${canvas.height - 150}px`;
+
+        // You can add any additional game logic here...
+    </script>
 </body>
 </html>
